--- a/pages/corgi/css/style.css
+++ b/pages/corgi/css/style.css
@@ -126,6 +126,7 @@ a{
     margin-bottom: 35px;
     width: 470px;
     font-size: 35px;
+    font-weight: 100;
 }
 
 .offer{
@@ -385,9 +386,14 @@ section p{
 }
 
 .section-button{
+    display: block;
     font-size: 22px;
     border: 1px #4A6FFF solid;
     border-radius: 35px;
+    width: 272px;
+    height: 65px;
+    text-align: center;
+    line-height: 65px;
 }
 
 .puppet-item-button{
@@ -753,7 +759,66 @@ fieldset{
 }
 
 .about{
+    position: relative;
     background-color: #FAFBFF;
+    width: 100%;
+    z-index: -2;
+    padding-top: 150px;
+    padding-bottom: 150px;
+}
+
+.about-figure{
+    position: relative;
+}
+
+.section-content-container{
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    width: fit-content;
+}
+
+.about-caption{
+    position: absolute;
+    width: 138px;
+    height: 64px;
+    display: flex;
+    flex-direction: column;
+    background-color: #FAFBFF;
+}
+
+.about-caption-breeder{
+    top: -45px;
+    left: 300px;
+}
+
+.about-caption-dog{
+    top: 145px;
+    left: -45px;
+}
+
+.about-text{
+    margin-bottom: 35px;
+}
+
+.name{
+    margin: 0;
+    margin-top: 15px;
+    margin-left: 20px;
+    padding: 0;
+    line-height: 20px;
+}
+
+.kind{
+    margin: 0;
+    padding: 0;
+    margin-left: 20px;
+    line-height: 20px;
+}
+
+.text-container{
+    order: 1;
+    width: 452px;
 }
 
 .puppets{
