--- a/pages/corgi/css/style.css
+++ b/pages/corgi/css/style.css
@@ -583,6 +583,10 @@ section p{
     font-size: 22px;
     border: 1px #4A6FFF solid;
     border-radius: 25px;
+    width: 100%;
+    height: 45px;
+    line-height: 45px;
+    text-align: center;
 }
 
 .more{
