--- a/pages/corgi/css/style.css
+++ b/pages/corgi/css/style.css
@@ -575,6 +575,8 @@ section p{
     top: calc(50% - 9px);
 }
 
+
+
 .offer-button{
     font-size: 22px;
     color: white;
@@ -951,11 +953,102 @@ fieldset{
     transform: rotate(38deg);
 }
 
+.stories{
+    display: flex;
+    padding: 100px 0;
+    width: 100%;
+    flex-direction: column;
+}
 
+.stories-list{
+    width: 940px;
+    margin: 0 auto;
+}
 
 .story-item{
     font-size: 15px;
     line-height: 20px;
+    display: flex;
+    padding: 75px 0 0 0;
+}
+
+.story-item-content-container::before{
+    content: "";
+    position: absolute;
+    top: -55px;
+    left: -80px;
+    display: block;
+    width: calc(100% + 80px * 2);
+    height: calc(100% + 55px * 2);
+    z-index: -1;
+    background: url("../img/story-item-content-bg.svg") 0 0;
+    background-size: 100% 100%;
+    /* TODO: Make bg to fit parent content*/
+
+}
+
+.customer-name{
+    font-weight: normal;
+}
+
+.story-figure{
+    margin: 0;
+    margin-right: 40px;
+    width: 350px;
+    height: 350px;
+    position: relative;
+    z-index: 1;
+}
+
+.story-item-content-container{
+    width: 490px;
+    display: flex;
+    flex-direction: column;
+    height: 408px;
+    position: relative;
+    z-index: 0;
+}
+
+.story-item-content-header-container{
+    display: flex;
+    justify-content: space-between;
+    margin: 0;
+    margin-bottom: 25px;
+}
+
+.stories-content-container{
+    position: relative;
+    width: 1280px;
+    margin: 0;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.story-nav-item{
+    position: absolute;
+    top: 50%;
+    --horizontal-position: 100px 
+}
+
+.story-nav-forward{
+    right: var(--horizontal-position);
+}
+
+.story-nav-backward{
+    left: var(--horizontal-position);
+}
+
+.story-description{
+    margin: 0;
+    padding: 0;
+}
+
+.story-item{
+    display: none;
+}
+
+.story-item-opened{
+    display: flex;
 }
 
 .corgi-world h3{
