--- a/pages/corgi/css/style.css
+++ b/pages/corgi/css/style.css
@@ -1186,6 +1186,70 @@ fieldset{
     line-height: 20px;
 }
 
+.form{
+    padding: 100px 0;
+}
+
+.form-content-container{
+    display: flex;
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.corgi-form{
+    margin-right: 42px;
+}
+
+.form-text-content-container{
+    width: 480px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+.form-text-content-container > *{
+    margin: 0;
+}
+
+.form-description{
+    margin-bottom: 45px;
+}
+
+fieldset{
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+    margin-bottom: 10px;
+}
+
+.input-label{
+    margin-bottom: 10px;
+}
+
+.form-input{
+    display: block;
+    width:285px;
+    height: 45px;
+    line-height: 45px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.submit{
+    display: block;
+    width: 325px;
+    height: 54px;
+    border: none;
+    background-color: #8099FE;
+    margin-top: 20px;
+}
+
+.form .section-header{
+    margin-left: 0;
+    margin-bottom: 30px;
+}
+
 .form p{
     font-size: 18px;
     line-height: 25px;
