--- a/pages/corgi/css/style.css
+++ b/pages/corgi/css/style.css
@@ -1283,15 +1283,54 @@ fieldset{
     top: calc(50% - 5px);
     left: 0;
 }
+
+.contacts-section{
+    padding: 100px 0;
+}
+
+.contacts-content-container{
+    display: grid;
+    width: 1100px;
+    grid-template-areas: 
+        "map list"
+        "map corgi";
+    grid-template-columns: 1fr 420px;
+    column-gap: 68px;
+    margin-top: 60px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
 .map{
     width: 600px;
     height: 470px;
     object-fit: cover;
     border-radius: 30px;
+    grid-area: map;
+}
+
+.contacts{
+    grid-area: list;
+    padding: 0;
+    width: 100%;
+    font-size: 18px;
+    margin: 0;
+}
+
+.contact-description{
+    margin: 0;
+    margin-bottom: 28px;
+}
+
+.contact-description:last-child{
+    margin-bottom: 0;
 }
 
 .corgi-lying{
     height: 160px;
+    grid-area: corgi;
+    margin-left: -160px;
 }
 
 .contact-term{
@@ -1309,7 +1348,7 @@ fieldset{
 }
 
 .contact-description{
-    font-size: 20px;
+    font-size: 18px;
 }
 
 .page-footer{
@@ -1346,6 +1385,11 @@ fieldset{
     left: 0;
 }
 
+.social-item{
+    width: 28px;
+    height: 28px;
+}
+
 .social-item img{
     width: 28px;
     height: 28px;
@@ -1356,6 +1400,12 @@ fieldset{
     display: flex;
     width: 105px;
     justify-content: space-between;
+}
+
+.contact-description > .social{
+    margin-top: 0;
+    padding: 0;
+    margin-bottom: 0;
 }
 
 .corgi-characteristics{
