--- a/pages/corgi/css/style.css
+++ b/pages/corgi/css/style.css
@@ -1508,4 +1508,75 @@ fieldset{
 
 .page-footer{
     background-color: #FAFBFF;
+    padding: 100px 0;
+}
+
+.footer-content-container{
+    display: grid;
+    grid-template-areas:
+        "logo button"
+        "logo email"
+        "logo phone"
+        "site-map site-map"
+        "policy copyright"
+        "private copyright";
+    width: 1100px;
+    height: 260px;
+    grid-template-columns: 1fr 1fr;
+    gap: 0;
+    grid-template-rows: 50px 15px 15px 120px 15px 15px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.company-name{
+    grid-area: logo;
+}
+
+.call-button{
+    grid-area: button;
+    width: 220px;
+    height: 52px;
+    text-align: center;
+    line-height: 52px;
+    font-size: 13px;
+    justify-self: flex-end;
+}
+
+.mail-title{
+    grid-area: email;
+    justify-self: flex-end;
+}
+
+.phone-title{
+    grid-area: phone;
+    justify-self: flex-end;
+}
+
+.footer-nav{
+    grid-area: site-map;
+    align-self: center;
+    width: 830px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.footer-nav > ul{
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+}
+
+.private-policy{
+    grid-area: policy;
+}
+
+.politics{
+    grid-area: private;
+}
+
+.copyright{
+    grid-area: copyright;
+    justify-self: flex-end;
+    align-self: flex-start;
 }
